--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sanity/icons": "^3.4.0",
+    "@sanity/icons": "^3.5.7",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.64.1",
+    "@sanity/vision": "^3.69.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
-    "next": "15.0.3",
-    "next-sanity": "^9.8.15",
+    "next": "^15.1.4",
+    "next-sanity": "^9.8.35",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sanity": "^3.64.1",
+    "sanity": "^3.69.0",
     "stripe": "^17.5.0",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
