--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
-    "next": "15.0.3",
+    "next": "^15.3.1",
     "next-sanity": "^9.8.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
