--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.3.4",
+    "@clerk/nextjs": "^6.18.5",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
@@ -23,10 +23,10 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
-    "next": "^15.3.1",
+    "next": "15.2.3",
     "next-sanity": "^9.8.15",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanity": "^3.64.1",
     "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
