--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.0",
@@ -20,13 +20,14 @@
     "@sanity/vision": "^3.64.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "15.2.3",
     "next-sanity": "^9.8.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "sanity": "^3.64.1",
     "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
